# aocs-models

./: .editorconfig  .gitignore  README.md  acceleration.m  analytic_comp_plot.m  attitude_dynamics.fmu  attitude_dynamics.slx  constants.sldd  gr.m  gravity.fmu  gravity_fmu.mlproj  initial.mat  norms_plot.m  orbit_dynamics.fmu  orbit_dynamics_fmu.mlproj  orbit_dynamics_initial.mat  orbit_propagation.fmu  orbit_propagation.slx  orbit_propagation_fmu.mlproj  quaternion_deriv.m  rmd.fmu  rmd_fmu.mlproj  solve.m  torque.m
NeuralFMU/: Manifest.toml  Project.toml
STK/: area.csv  parse.py  position-velocity.csv  power.csv  pyproject.toml  quaternions.csv
blender/: .isort.cfg  README.md  blender.py  power_generation.py  pyproject.toml  rotation.py  utils.py
blender/src/: area.csv  area_fixed_axis.csv  area_spin_inertial.csv  astro.py  blender.py  config.py  eclipse.py  eltypes.py  generation.py  here.py  main.py  main_stats.prof  our_area  our_power  parse.py  position-velocity.csv  power.csv  power_fixed_axis.csv  power_generation.py  power_spin_inertial.csv  quaternion_fixed_axis.csv  quaternion_spin_inertial.csv  quaternions.csv  stations.txt  utils.py
blender/src/new/: main_stats.prof  stats_cum  stats_time
blender/src/old/: main_stats.prof  stats_cum  stats_time
blender/stk/: area.csv  quaternion.csv
dsmc/: Dockerfile  install.sh  script.sh
fmu/: attitude_dynamics.slx  attitude_dynamics_fmu.mlproj  gravity.slx  orbit_dynamics.slx  orbit_dynamics_fmu.mlproj  parameters.sldd  solar_radiation_pressure.slx  third_body_perturbations.slx
solver/: forward_euler.m  (+1 more)
(+37 files in other folders)
