[tool.poetry]
name = "stk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyquaternion = "^0.9.9"
astropy = "^5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
